--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,12 @@
-language: erlang
+language: elixir
+
+elixir: 1.0.0
 
 env:
-  - ELIXIR="v1.0.0"
+  - MIX_ENV="test"
 
 otp_release:
   - 17.0
-
-before_install:
-  - mkdir -p vendor/elixir
-  - wget -q https://github.com/elixir-lang/elixir/releases/download/$ELIXIR/Precompiled.zip && unzip -qq Precompiled.zip -d vendor/elixir
-  - export PATH="$PATH:$PWD/vendor/elixir/bin"
-  - mix local.hex --force
-  - mix local.rebar
-  - export MIX_ENV="test"
-
-script:
-  - mix deps.get
-  - mix test
 
 after_success:
   - mix compile && mix coveralls.travis
